(fix) fix visual bug Add text to group and delete features Fix absoluted legend stretching screen

--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -8,6 +8,10 @@ body {
 .delete {
   float:right;
 }
+.delete, .sort {
+  text-decoration: none;
+  color:#fff;
+}
 .fa {
   color:white;
 }.form-group {
@@ -36,7 +40,7 @@ body {
 .hidden {
   visibility:hidden;
   position:absolute;
-  left:900000000px;
+  left:-900000000px;
 }
 .sort {
   float:left;
